After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 688568 - not doing a good job of showing where edge of photo is
not doing a good job of showing where edge of photo is
Status: RESOLVED FIXED
Product: gnome-photos
Classification: Applications
Component: general
unspecified
Other Linux
: Normal normal
: ---
Assigned To: GNOME photos maintainer(s)
GNOME photos maintainer(s)
Depends on:
Blocks:
 
 
Reported: 2012-11-18 01:46 UTC by William Jon McCann
Modified: 2013-08-09 14:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (83.33 KB, image/png)
2012-11-18 01:46 UTC, William Jon McCann
  Details
Use texture background in preview (5.97 KB, patch)
2012-12-07 22:48 UTC, William Jon McCann
none Details | Review
Use texture background in preview (5.79 KB, patch)
2012-12-07 22:57 UTC, Cosimo Cecchi
committed Details | Review

Description William Jon McCann 2012-11-18 01:46:17 UTC
Created attachment 229265 [details]
screenshot

Because we don't stroke the edge of the toolbar and we use black as the background we don't do a good job of showing where the photo ends.
Comment 1 William Jon McCann 2012-11-19 17:14:24 UTC
Might want to use a noise texture background here? Jakub?
Comment 2 Jakub Steiner 2012-11-20 07:12:14 UTC
Black is perfect for fullscreen. But for the windowed/maximized it might be better to use a lighter canvas color. I suggest going for a dark grey #202020 with the noise texture, indeed.
Comment 3 William Jon McCann 2012-12-07 22:48:50 UTC
Created attachment 231007 [details] [review]
Use texture background in preview
Comment 4 Cosimo Cecchi 2012-12-07 22:57:18 UTC
Created attachment 231008 [details] [review]
Use texture background in preview

--

Better patch, invalidates the background when going to backdrop.
Comment 5 Debarshi Ray 2012-12-10 08:54:38 UTC
Comment on attachment 231008 [details] [review]
Use texture background in preview

Made some minor style changes.
Comment 6 Debarshi Ray 2012-12-10 08:55:08 UTC
Thanks for the patches!

commit 992c39d61dcb942e7677692196db2081e78799b6
Author: Cosimo Cecchi <cosimoc@gnome.org>
Date:   Fri Dec 7 17:55:12 2012 -0500

    embed: Use texture background in preview
    
    https://bugzilla.gnome.org/show_bug.cgi?id=688568
Comment 7 Debarshi Ray 2013-04-14 23:53:00 UTC
Is this fixed / better now in 3.8.0?
Comment 8 Debarshi Ray 2013-08-09 14:20:15 UTC
Closing. Please feel free to re-open if you have reason to think otherwise.