embed: Use texture background in preview

https://bugzilla.gnome.org/show_bug.cgi?id=688568